--- a/src/main/resources/templates/commons/error-page.html
+++ b/src/main/resources/templates/commons/error-page.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ERROR</title>
-	<link rel="stylesheet" href="/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="/css/error-page.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ERROR</title>
 
-	<link rel="stylesheet"
-		  href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-	<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/error-page.css}">
 </head>
 <body>
 <div id="app" style="min-height: 550px">
-	<div>ERROR</div>
-	<div class="txt">
-		Please try again!<span class="blink">_</span>
-	</div>
-	<div class="justify-content-center">
-		<a href="${pageContext.request.contextPath}/">
-			<button class="btn btn-success">Back to Home</button>
-		</a>
-	</div>
+    <div>ERROR</div>
+    <div class="txt">
+        Please try again!<span class="blink">_</span>
+    </div>
+    <div class="justify-content-center">
+        <a href="${pageContext.request.contextPath}/">
+            <button class="btn btn-success">Back to Home</button>
+        </a>
+    </div>
 </div>
 
 </body>
