--- a/src/main/resources/templates/computer/computer-list.html
+++ b/src/main/resources/templates/computer/computer-list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,8 +13,8 @@
     <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/computer-list.css"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/computer-list.css}">
 </head>
 <body>
 <%@ include file="../commons/header.html"%>
@@ -51,7 +51,7 @@
                                     <option value="Offline"
                                             ${status==
                                     'Offline' ? 'selected' : ''}>Offline</option>
-                                    <option value="Online" ${status==
+                                    <option value="Online" ${status==1}
                                     'Online' ? 'selected' : ''}>Online</option>
                                     <option value="Maintain" ${computer.status==
                                     'Maintain' ? 'selected' : ''}>Maintain</option>
