--- a/src/main/resources/templates/computer/create-computer.html
+++ b/src/main/resources/templates/computer/create-computer.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Create computer</title>
 
-	<link rel="stylesheet" href="/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="/css/create-computer.css" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/create-computer.css}">
 </head>
 <body>
 	<%@ include file="../commons/header.html"%>
 
-	<div class="container-fluid d-flex justify-content-center">
+	<div class="container-fluid d-flex justify-content-center mt-3">
 		<div class="login-form">
 			<h6 class="text-center mt-4">NEW COMPUTER</h6>
 			<form
