--- a/src/main/resources/templates/customer/customer-list.html
+++ b/src/main/resources/templates/customer/customer-list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +8,13 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/computer-list.css"/>
-
-
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/customer-list.css}">
 
 </head>
 <body>
@@ -25,7 +24,7 @@
 
 
 <div class="container mt-5" id="table-computer">
-     
+
     <div>
         <div class="row">
             <h2 class="text-center text-white">CUSTOMER MANAGEMENT</h2>
@@ -64,7 +63,7 @@
                             </form>
                         </div>
                         <div class="col-2 d-flex justify-content-end">
-                            <a href="${pageContext.request.contextPath}/customer/create">
+                            <a th:href="@{/customer/create}">
                                 <button class="btn btn-outline-secondary">Add new</button>
                             </a>
                         </div>
@@ -90,17 +89,15 @@
                 </tr>
                 </thead>
                 <tbody>
-
-                <c:forEach items="${customers}" var="item" varStatus="status">
-                    <tr>
-                        <td class="text-center">${status.count}</td>
-                        <td>${item.customerId}</td>
-                        <td>${item.name}</td>
-                        <td>${item.address}</td>
-                        <td>${item.phoneNumber}</td>
-                        <td>${item.email}</td>
+                    <tr th:each="item, rowStat : ${customers}">
+                        <td class="text-center" th:text="${rowStat.count}"></td>
+                        <td th:text="${item.customerId}"></td>
+                        <td th:text="${item.name}"></td>
+                        <td th:text="${item.address}"></td>
+                        <td th:text="${item.phoneNumber}"></td>
+                        <td th:text="${item.email}"></td>
                         <td><a
-                                href="${pageContext.request.contextPath}/customer/${item.customerId}">
+                                th:href="@{/customer/${item.customerId}}">
                             <button class="btn btn-outline-secondary color-icon">
                                 <i class="fa-solid fa-pen-to-square"></i>
                             </button>
@@ -112,76 +109,75 @@
                                 <i class="fa-solid fa-trash"></i>
                             </button>
                             <a
-                                    href="${pageContext.request.contextPath}/customer/history/${item.customerId}">
+                                    th:href="@{/customer/history/${item.customerId}}">
                                 <button type="button" class="btn btn-outline-secondary ">
                                     <i class="fa-solid fa-gears"></i>
                                 </button>
                             </a></td>
                     </tr>
-                </c:forEach>
 
                 </tbody>
             </table>
 
             <!--No record in database-->
-            <c:if test="${customers.size() ==0}">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-6">
-                            <img
-                                    src="https://i.giphy.com/media/HTSsuRrErs54g1Tqr5/giphy.webp">
-                            <div class="text-center">
-                                <p class="text-white">No result!</p>
-                            </div>
-                        </div>
+<!--            <c:if test="${customers.size() ==0}">-->
+<!--                <div class="container">-->
+<!--                    <div class="row justify-content-center">-->
+<!--                        <div class="col-6">-->
+<!--                            <img-->
+<!--                                    src="https://i.giphy.com/media/HTSsuRrErs54g1Tqr5/giphy.webp">-->
+<!--                            <div class="text-center">-->
+<!--                                <p class="text-white">No result!</p>-->
+<!--                            </div>-->
+<!--                        </div>-->
 
-                    </div>
-                </div>
-            </c:if>
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </c:if>-->
         </div>
 
-        <c:if test="${customers.size() !=0}">
-            <%--Pagination--%>
-            <div class="d-flex justify-content-center">
+<!--        <c:if test="${customers.size() !=0}">-->
+<!--            <%&#45;&#45;Pagination&#45;&#45;%>-->
+<!--            <div class="d-flex justify-content-center">-->
 
-                <table border="1" cellpadding="5">
-                    <tr class="d-flex justify-content-center">
-                        <td>
-                            <c:if test="${currentPage!=1}">
-                                <a
-                                        href="?page=${currentPage - 1}&searchName=${searchName}&searchAddress=${searchAddress}">Previous</a>
-                            </c:if>
-                            <c:if test="${currentPage==1}">
-                                <a class="text-secondary">Previous</a>
-                            </c:if>
-                        </td>
-                        <c:forEach begin="1" end="${noOfPages}" var="i">
-                            <c:choose>
-                                <c:when test="${currentPage eq i}">
-                                    <td class="text-white">${i}</td>
-                                </c:when>
-                                <c:otherwise>
-                                    <td><a
-                                            href="?page=${i}&searchName=${searchName}&searchAddress=${searchAddress}">${i}</a>
-                                    </td>
-                                </c:otherwise>
-                            </c:choose>
-                        </c:forEach>
-                        <td>
-                            <c:if test="${currentPage!=noOfPages}">
-                                <a
-                                        href="?page=${currentPage + 1}&searchName=${searchName}&searchAddress=${searchAddress}">Next</a>
-                            </c:if>
-                            <c:if test="${currentPage==noOfPages}">
-                                <a class="text-secondary">Next</a>
-                            </c:if>
-                        </td>
-                    </tr>
-                </table>
+<!--                <table border="1" cellpadding="5">-->
+<!--                    <tr class="d-flex justify-content-center">-->
+<!--                        <td>-->
+<!--                            <c:if test="${currentPage!=1}">-->
+<!--                                <a-->
+<!--                                        href="?page=${currentPage - 1}&searchName=${searchName}&searchAddress=${searchAddress}">Previous</a>-->
+<!--                            </c:if>-->
+<!--                            <c:if test="${currentPage==1}">-->
+<!--                                <a class="text-secondary">Previous</a>-->
+<!--                            </c:if>-->
+<!--                        </td>-->
+<!--                        <c:forEach begin="1" end="${noOfPages}" var="i">-->
+<!--                            <c:choose>-->
+<!--                                <c:when test="${currentPage eq i}">-->
+<!--                                    <td class="text-white">${i}</td>-->
+<!--                                </c:when>-->
+<!--                                <c:otherwise>-->
+<!--                                    <td><a-->
+<!--                                            href="?page=${i}&searchName=${searchName}&searchAddress=${searchAddress}">${i}</a>-->
+<!--                                    </td>-->
+<!--                                </c:otherwise>-->
+<!--                            </c:choose>-->
+<!--                        </c:forEach>-->
+<!--                        <td>-->
+<!--                            <c:if test="${currentPage!=noOfPages}">-->
+<!--                                <a-->
+<!--                                        href="?page=${currentPage + 1}&searchName=${searchName}&searchAddress=${searchAddress}">Next</a>-->
+<!--                            </c:if>-->
+<!--                            <c:if test="${currentPage==noOfPages}">-->
+<!--                                <a class="text-secondary">Next</a>-->
+<!--                            </c:if>-->
+<!--                        </td>-->
+<!--                    </tr>-->
+<!--                </table>-->
 
-            </div>
+<!--            </div>-->
 
-        </c:if>
+<!--        </c:if>-->
     </div>
 
 
