--- a/src/main/resources/templates/customer/edit-customer.html
+++ b/src/main/resources/templates/customer/edit-customer.html
@@ -15,21 +15,20 @@
     <div class="login-form">
         <h3 class="text-center text-white">UPDATE CUSTOMER</h3>
         <form
-                th:action="@{/customer/create}"
+                th:action="@{/customer/{id}(id=${customerDto.getCustomerId()})}"
                 th:object="${customerDto}"
                 method="post">
             <div class="row my-4">
                 <div class="hidden">
                     <input th:field="*{customerId}" type="text"
                            class="form-control input" id="customerId"
-                           autocomplete="off" th:value="*{customerId}"/>
+                           autocomplete="off"/>
                 </div>
                 <div class="col-md-6" style="padding-right: 15px">
                     <div class="form-floating textbox mb-4">
 
                         <input th:field="*{customerName}" type="text" class="form-control input"
-                               id="customerName" placeholder="Enter the full name..." autocomplete="off"
-                               value="${customer.name}"/>
+                               id="customerName" placeholder="Enter the full name..." autocomplete="off"/>
                         <label for="customerName" style="color: white"> Full name <span
                                 class="text-danger">*</span>
                         </label>
@@ -40,9 +39,8 @@
 
                 <div class="col-md-6" style="padding-right: 15px">
                     <div class="form-floating textbox mb-4">
-                        <input path="address" type="text" class="form-control input"
-                               id="address" placeholder="Họ và tên" autocomplete="off"
-                               value="${customer.address }"/>
+                        <input th:field="*{address}" type="text" class="form-control input"
+                               id="address" placeholder="Họ và tên" autocomplete="off"/>
                         <label for="address" style="color: white"> Address <span
                                 class="text-danger">*</span>
                         </label>
@@ -54,9 +52,9 @@
 
                 <div class="col-md-6" style="padding-right: 15px">
                     <div class="form-floating textbox mb-4">
-                        <input path="email" type="email" class="form-control input"
+                        <input th:field="*{email}" type="email" class="form-control input"
                                id="email" placeholder="example@gmail.com" autocomplete="off"
-                               value="${customer.email }"/>
+                               />
                         <label for="email" style="color: white"> Email <span
                                 class="text-danger">*</span>
                         </label>
@@ -65,10 +63,10 @@
                 </div>
                 <div class="col-md-6 " style="padding-right: 15px">
                     <div class="form-floating textbox mb-4">
-                        <input path="phoneNumber" type="text"
+                        <input th:field="*{phoneNumber}" type="text"
                                class="form-control input" id="phone-number"
                                placeholder="Họ và tên" autocomplete="off"
-                               value="${customer.phoneNumber}"/>
+                               />
                         <label for="phone-number" style="color: white"> Phone <span
                                 class="text-danger">*</span>
                         </label>
